# pos-puc-rio-mvp-ciencia-de-dados

./: .gitignore  analise.ipynb  enunciado.md  notebook-colab.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
src/mvp/: analysis.py  constants.py  preprocessors.py  session_utils.py  training.py  visualization.py
src/mvp/domain/: bens_de_candidatos.py  candidatos.py
src/mvp/persistence/: loaders.py
