[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "pyspark==3.5.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mvp"]
